<resources>
    <string name="app_name">Akkru</string>
    <string name="username_hint">Username</string>
    <string name="passeword_hint">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_signup_link">New User? Sign Up</string>
    <string name="insuranceId">Insurance ID</string>
    <string name="firstname">First Name</string>
    <string name="lastname">last Name</string>
    <string name="city">City</string>
    <string name="contactInfo">Contact Info</string>
    <string name="email">Email</string>
    <string name="signup">SIGN UP</string>
    <string name="gladtosee">Glad to see you!</string>
    <string name="create_account">Create an account</string>
    <string name="drink_coffee">Drink coffee and prepare your future in one sip</string>
    <string name="continue_email">CONTINUE WITH EMAIL</string>
    <string name="login_later">i\'ll login later</string>
</resources>
