<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_gravity="center_vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_local_cafe_black_24dp"
        />
    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="30dp"
        android:text="@string/create_account"
        android:textColor="@color/brightRed"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/drink_coffee"
        android:layout_below="@+id/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:maxLines="3"
        android:text="@string/drink_coffee"
        android:textStyle="bold"
        android:textSize="37sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/continue_email"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@+id/drink_coffee"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />
    <Button
        android:id="@+id/login_later"
        android:layout_below="@+id/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_later"
        android:textColor="@color/darkGrey"
        android:layout_marginTop="10dp"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:background="@null"
        />


</RelativeLayout>