<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingBottom="20dp"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            >

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:background="@color/white"/>

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/avatar_layout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="50dp"
            >

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_person_black_24dp"/>

        </FrameLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/signup_input_insuranceid_layout"
            android:layout_below="@id/avatar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >

            <EditText
                android:id="@+id/signup_input_insuranceid"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/insuranceId"
                android:textColorHint="@color/darkGrey"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@id/signup_input_insuranceid_layout"
            android:id="@+id/first_name_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <EditText
                android:id="@+id/signup_input_firstname"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:textColorHint="@color/darkGrey"
                android:maxLines="1"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_toRightOf="@+id/first_name_layout"
            android:layout_below="@id/signup_input_insuranceid_layout"
            android:id="@+id/lastname_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="10dp"
            >
            <EditText
                android:id="@+id/signup_input_lastname"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:textColorHint="@color/darkGrey"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@id/first_name_layout"
            android:id="@+id/city_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <EditText
                android:id="@+id/signup_input_city"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:textColorHint="@color/darkGrey"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:id="@+id/contactInfo_layout"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/darkGrey"
            android:layout_below="@id/city_layout"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contactInfo"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:maxLines="1"
                />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/contactInfo_layout"
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <EditText
                android:id="@+id/signup_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/darkGrey"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_below="@id/email_layout"
            android:id="@+id/btn_signup"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbutton"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            />
    </RelativeLayout>
</ScrollView>