<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"
        >

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:background="@color/white"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gladtosee"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_gravity="left"
            android:layout_marginBottom="50dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <EditText
                android:id="@+id/login_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textColor="@color/darkGrey"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/black"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/btn_login"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            />

        <Button
            android:id="@+id/btnLinkSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_signup_link"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="3dp"
            />

    </LinearLayout>

</LinearLayout>